--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "expect": "^23.6.0",
         "mocha": "^5.2.0",
         "json-loader": "^0.5.4",
-        "supertest": "^3.3.0"
+        "supertest": "^3.3.0",
+        "chai": "^4.3.4",
+        "chai-as-promised": "^7.1.1"
     },
     "dependencies": {
         "babel-loader": "^8.0.4",
@@ -42,6 +44,7 @@
         "jquery": "^3.5.0",
         "mongoose": "^5.4.0",
         "nodemon": "^1.14.12",
+        "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb",
         "solc": "^0.4.25",
         "style-loader": "^0.13.1",
         "truffle-contract": "^1.1.11",
