--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
