--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,14 @@
     "node": ">=8.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "^3.7.1",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^3.0.1",
     "babel-loader": "^8.0.4",
+    "cross-env": "^7.0.3",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
     "uuid": "^8.3.2"
   },
