--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-node_modules
 .env
+node_modules
+
+# Ignore build output of client static side
 ./client/build
-/build
+
+# Ignore build output of compiled contracts
+./build/contracts/*
+./client/src/contracts/*
