ignore local build files

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 node_modules
 
 # Ignore build output of client static side
-./client/build
+client/build
 
 # Ignore build output of compiled contracts
-./build/contracts/*
-./client/src/contracts/*
+build/contracts/*
+client/src/contracts/*
