modified cert for encryption feature, added encrypt and decrypt for certificate

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ client/build
 # Ignore build output of compiled contracts
 build/contracts/*
 client/src/contracts/*
+
+package.json
+package-lock.json
