add copy scripts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
         "test-linux": "truffle test test/certification-web3.js && mocha test/*.test.js",
         "test-server": "mocha test/*.test.js",
         "test": "npm run test-windows || npm run test-linux",
-        "contract-deploy": "truffle.cmd migrate --reset || truffle migrate --reset",
-        "deploy": "truffle.cmd migrate -f 2 --network rinkeby || truffle migrate -f 2 --network rinkeby",
+        "copy-contracts-build": "echo \" Copying build/contracts/* files into client/src/contracts \" && copyfiles -f build/contracts/* client/src/contracts",
+        "deploy:local": "(truffle.cmd migrate --reset || truffle migrate --reset) && npm run copy-contracts-build",
+        "deploy:testnet": "(truffle.cmd migrate -f 2 --network rinkeby || truffle migrate -f 2 --network rinkeby) && npm run copy-contracts-build",
         "ganache": "ganache-cli -p 8545 &",
         "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
     },
@@ -38,6 +39,7 @@
         "babel-loader": "^8.0.4",
         "body-parser": "^1.18.2",
         "chalk": "^2.4.1",
+        "copyfiles": "^2.4.1",
         "css-loader": "^0.26.1",
         "dotenv": "^6.2.0",
         "express": "^4.16.2",
