--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .env
+
+node_modules
 ./node_modules
 
 # Ignore build output of client static side
@@ -7,3 +9,4 @@ client/build
 # Ignore build output of compiled contracts
 build/contracts/*
 client/src/contracts/*
+contracts
