--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
+    "use-between": "0.0.18",
     "uuid": "^8.3.2"
   },
   "scripts": {
