--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^3.0.1",
-    "babel-loader": "^8.0.4",
     "crypto-js": "^4.1.1",
     "cross-env": "^7.0.3",
     "prop-types": "^15.6.2",
@@ -17,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "babel-loader": "^8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
