--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "chai-as-promised": "^7.1.1"
     },
     "dependencies": {
-        "babel-loader": "^8.0.4",
+        "babel-loader": "8.0.4",
         "body-parser": "^1.18.2",
         "chalk": "^2.4.1",
         "copyfiles": "^2.4.1",
