--- a/client/package.json
+++ b/client/package.json
@@ -8,17 +8,18 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^3.0.1",
-    "crypto-js": "^4.1.1",
+    "babel-loader": "^8.0.4",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
-    "uuid": "^8.3.2",
-    "babel-loader": "^8.0.4",
-    "use-between": "0.0.18"
+    "react-toastify": "^7.0.4",
+    "use-between": "0.0.18",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
