--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "2.1.1",
     "react-toastify": "^7.0.4",
     "use-between": "0.0.18",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^1.0.0-beta.37"
   },
   "scripts": {
     "start": "react-scripts start",
