--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "react-toastify": "^7.0.4",
     "use-between": "0.0.18",
     "uuid": "^8.3.2",
-    "web3": "^1.0.0-beta.37"
+    "web3": "^1.0.0-beta.37",
+    "truffle-contract": "^1.1.11",
+    "truffle-hdwallet-provider": "0.0.6",
+    
   },
   "scripts": {
     "start": "react-scripts start",
