--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,7 @@
     "react-scripts": "2.1.1",
     "react-toastify": "^7.0.4",
     "use-between": "0.0.18",
-    "uuid": "^8.3.2",
-    "web3": "^1.0.0-beta.37",
-    "truffle-contract": "^1.1.11",
-    "truffle-hdwallet-provider": "0.0.6",
-    
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
