--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
         "truffle-contract": "^1.1.11",
         "truffle-hdwallet-provider": "0.0.6",
         "uuid": "^8.3.2",
-        "web3": "^1.0.0-beta.37"
+        "web3": "1.5.1"
     }
 }
