--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "node": ">=8.11.2"
   },
   "dependencies": {
+    "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^3.0.1",
     "babel-loader": "^8.0.4",
